feat(UI): Now images are included in the UI.

--- a/indext.html
+++ b/indext.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="images/favicon.png" />
 
     <title>TV Series Search Engine</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
   </head>
   <body>
     <div id="search-div">
@@ -25,11 +25,14 @@
 
     <div id="result-div">
       <div id="result-list">
-        <div class="result-item">yjrhngbfvd</div>
-        <div class="result-item">23423uimjnfc</div>
-        <div class="result-item">2gfbbfg3423</div>
-        <div class="result-item">yrtebvfdcsbuhdjnwkbg</div>
-        <div class="result-item">yjrhngbfvd</div>
+        <div class="result-item">
+          <img src="" alt="">
+          <span></span>
+        </div>
+        <div class="result-item">item2</div>
+        <div class="result-item">item3</div>
+        <div class="result-item">item4</div>
+        <div class="result-item">item5</div>
       </div>
     </div>
 
